Fix #29827: 2.61 Scale and translate bugs

Scale lead to crash because of incorrect check for buffer size.
Translate bug was caused by ignoring buffer offset.